ingress.yml
---
apiVersion: networking.k8s.io/v1	
kind: Ingress
metadata:
  annotations: 
    key: value
  labels: 
    environment: dev
    app: nginx
    name: nginx
  namespace: dev  
spec:
  defaultBackend:
    resource: 
      apiGroup: v1
      kind: TypedLocalObjectReference
      name: gol
  service: 
    name: nginx
    port: 
      name: nginx
      number: 80
  ingressClassName: nginx
  rules:
    - host: 80
      http: 
        paths: 
          - path: /testpath
            pathType: prefix
          - backend:       
              service: 
                name: nginx
                port: 
                  number: 80
